--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.11",
     "mongodb": "^3.1.8",
     "mongoose": "^5.3.3"
   },
